--- a/package.json
+++ b/package.json
@@ -3,32 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node": "6.11.1"
+    "node": "^16.14.0"
   },
   "dependencies": {
     "@material-ui/core": "^4.12.4",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
     "file-saver": "^2.0.5",
     "filepond": "^4.30.4",
     "filepond-plugin-file-validate-type": "^1.2.8",
     "filepond-plugin-image-exif-orientation": "^1.0.11",
     "filepond-plugin-image-preview": "^4.6.11",
-    "final-form": "^4.20.7",
-    "final-form-arrays": "^3.0.2",
-    "prop-types": "^15.8.1",
-    "ra-data-json-server": "^4.2.6",
-    "ra-data-simple-rest": "^4.2.6",
+    "ra-data-django-rest-framework": "^0.2.1",
     "react": "^18.2.0",
-    "react-admin": "^4.2.7",
-    "react-admin-import-csv": "^1.0.33",
+    "react-admin": "^4.6.0",
     "react-dom": "^18.2.0",
     "react-filepond": "^7.1.2",
-    "react-final-form": "^6.5.9",
-    "react-final-form-arrays": "^3.1.3",
     "react-scripts": "^5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^3.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
