--- a/package.json
+++ b/package.json
@@ -18,13 +18,15 @@
     "react-dom": "^18.2.0",
     "react-filepond": "^7.1.2",
     "react-scripts": "^5.0.1",
+    "serve": "^14.1.2",
     "web-vitals": "^3.1.0"
   },
   "scripts": {
-    "start": "node --max_old_space_size=2560 node_modules/.bin/react-scripts start",
+    "start": "serve -s build",
     "build": "node --max_old_space_size=2560 node_modules/.bin/react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "heroku-postbuild": "npm run build"
   },
   "eslintConfig": {
     "extends": [
