--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
     "web-vitals": "^3.1.0"
   },
   "scripts": {
+    "dev": "react-scripts start",
     "start": "serve -s build",
-    "build": "node --max_old_space_size=2560 node_modules/.bin/react-scripts build",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "heroku-postbuild": "npm run build"
