--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.12.4",
+    "@mui/material": "^5.11.6",
     "file-saver": "^2.0.5",
     "filepond": "^4.30.4",
     "filepond-plugin-file-validate-type": "^1.2.8",
